# EmailSender

./: .dockerignore  Dockerfile  asyncapi.json  docker-compose.yaml  pyproject.toml
src/: config.py  logging_config.py  main.py  schema.py  service.py  util.py  web.py
src/template/: confirm_email.html  reset_password.html
